# aie-certification-challenge

./: .env.template  .gitignore  .pre-commit-config.yaml  DELIVERABLES.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
evaluations/: enhanced_hybrid_results.json  enhanced_ragas_results.json  evaluate_advanced_retrieval.py  evaluate_rag.py  golden_dataset.py  hybrid_results.json  ragas_results.json  raw_responses.json
src/: main.py
src/api/: main.py
src/config/: settings.py
src/models/: email_models.py
src/rag/: graph.py
src/services/: advanced_retrieval_service.py  email_crawler.py  email_processing_service.py  embedding_service.py  qdrant_service.py
tests/e2e/: email_processing_service_tests.py
tests/integration/: email_crawler_tests.py  embedding_service_tests.py  qdrant_service_tests.py
tests/unit/: embedding_service_tests.py
